# fenix

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Dockerfile-ubuntu-20.04  Makefile  README.md  VIM1.config  config-template.conf  config-travis.conf  setenv.sh
.github/workflows/: 01.test_example.yml  build.sh  build.yml  check-build.yml  main.yml  release-build.yml  remove-old-artifacts.yml  test-build-debian.yml  test-build-ubuntu.yml  test-build.yml
.travis/: build.sh  deploy.sh  ssh_key.enc
archives/chroot-scripts/: RUNME.sh  RUNME_REMOUNT.sh
archives/filesystem/: RUNME.sh  RUNME_REMOUNT.sh  RUNME_mate.sh  RUNME_server.sh
archives/hwpacks/mali/Rockchip/: CMakeLists.txt
archives/hwpacks/mali/Rockchip/debian/: README.Debian  README.source  changelog  control  copyright  libmali-rk-dev.links  libmali-rk-midgard-t76x-r14p0-r0p0-wayland.install  libmali-rk-midgard-t76x-r14p0-r0p0-wayland.links  libmali-rk-midgard-t76x-r14p0-r0p0.install  libmali-rk-midgard-t76x-r14p0-r1p0.install  libmali-rk-midgard-t76x-r14p0-r1p0.links  libmali-rk-midgard-t86x-r14p0.install  libmali-rk-utgard-400-r7p0.install  libmali-rk-utgard-400-r7p0.links  libmali-rk-utgard-450-r7p0.install  rules  shlibs.local.ex  watch.ex
archives/hwpacks/mali/Rockchip/include/: gbm.h  mali.icd
archives/hwpacks/mali/Rockchip/include/EGL/: eglplatform.h  eglplatform_fb.h
archives/hwpacks/mali/Rockchip/include/FBDEV/: eglplatform.h  mali_fbdev_types.h
archives/hwpacks/mali/Rockchip/lib/pkgconfig_arm64/: OpenCL.pc  egl.pc  gbm.pc  glesv2.pc  mali.pc  wayland-egl.pc
archives/hwpacks/mali/Rockchip/lib/pkgconfig_armhf/: OpenCL.pc  egl.pc  gbm.pc  glesv2.pc  mali.pc  wayland-egl.pc
archives/hwpacks/mali/Rockchip/pkgconfig/: OpenCL.pc.cmake  egl.pc.cmake  gbm.pc.cmake  glesv2.pc.cmake  mali.pc.cmake
archives/logo/: logo.img
config/: config  fenix.key  functions  panfork-5.10.key  panfork-6.1.key  panfork-kisak.key  version
config/boards/: Edge-2L.conf  Edge.conf  Edge1.conf  Edge2.conf  Firefly_RK3399.conf  Generic.conf  Generic.eos  VIM.conf  VIM.inc  VIM1.conf  VIM1S.conf  VIM2.conf  VIM3.conf  VIM3.inc  VIM3L.conf  VIM3L.wip  VIM4.conf
config/bootenv/: EDGE_env_ext.txt  Edge-2L_uEnv.txt  Edge2_uEnv.txt  Edge_env_ext.txt  VIM1S_uEnv.txt  VIM1_env_ext.txt  VIM2_env_ext.txt  VIM3L_env_ext.txt  (+6 more)
docs/: Generic_images.md  new-developing-fenix-branch.md
env/: setenv.sh
scripts/: build.sh  clean.sh  create_image.sh  generic.sh  github.sh  krescue.sh  make_debian_mainline_server.sh  make_image.sh  make_uboots.sh  param.sh  prepare.sh  remount_rootfs.sh  rootfs_stage.sh  server.sh  ubuntu-mate.sh  write_image.sh  xze
(+447 files in other folders)
